--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "node-minizip",
   "version": "0.0.1",
   "description": "A node.js addon binding Minizip for handling zip files.",
+  "main": "main.js",
   "licenses": [{
     "type": "MIT",
     "url": "https://github.com/hokein/node-minizip/blob/master/LICENSE"
