--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "node-minizip",
   "version": "0.0.1",
   "description": "A node.js addon binding Minizip for handling zip files.",
+  "keywords": ["zip", "minizip", "zlib", "unzip"],
   "main": "main.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hokein/node-minizip"
+  },
   "licenses": [{
     "type": "MIT",
     "url": "https://github.com/hokein/node-minizip/blob/master/LICENSE"
   }],
+  "bugs": {
+    "url": "https://github.com/hokein/node-minizip/issues"
+  },
   "dependencies": {
     "nan": "1.3.0"
   },
