remove THROW_BAD_ARGS and fix indent error

--- a/package.json
+++ b/package.json
@@ -47,6 +47,12 @@
       "email": "hokein.wu@gmail.com"
     }
   ],
+  "contributors": [
+    {
+      "name": "imskull",
+      "email": "imskull@gmail.com"
+    }
+  ],
   "dist": {
     "shasum": "f4eccd07bd590fd5de061fc42886002b0decef05",
     "tarball": "http://registry.npmjs.org/node-minizip/-/node-minizip-0.1.0.tgz"
